--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
 </head>
 <header><app-menu></app-menu></header>
 <body>
-<app-slider></app-slider>
+<router-outlet></router-outlet>
 </body>
+<app-footer></app-footer>
 </html>
