--- a/src/app/pelis/pelis.component.html
+++ b/src/app/pelis/pelis.component.html
@@ -1,1 +1,57 @@
-<p>pelis works!</p>
+<br>
+<br>
+<br>
+<br>
+<br>
+<div class="row">
+    <div  class="col-sm-3">
+      <div id="sombra" class="card border-5 border-primary" style="width: 20rem; height: 35rem;">
+        <img src="../../assets/img/expediente.jpg" style="height: 25rem" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Expediente Warren</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-dark">Go somewhere</a>
+        </div>
+      </div> 
+    </div>
+
+    <div class="col-sm-3">
+        <div id="sombra" class="card border-5 border-primary" style="width: 20rem; height: 35rem;">
+          <img src="../../assets/img/bohemia.jpg" style="height: 25rem" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-dark">Go somewhere</a>
+          </div>
+        </div> 
+      </div>
+
+      <div class="col-sm-3">
+        <div id="sombra" class="card border-5 border-primary" style="width: 20rem; height: 35rem;">
+          <img src="../../assets/img/spider.jpg" style="height: 25rem" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Spider-Man: Un nuevo universo</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of.</p>
+            <a href="#" class="btn btn-dark">Go somewhere</a>
+          </div>
+        </div> 
+      </div>
+
+      <div class="col-sm-3">
+        <div id="sombra" class="card border-5 border-primary" style="width: 20rem; height: 35rem;">
+          <img src="../../assets/img/1917.jpg" style="height: 25rem" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">1917</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-dark">Go somewhere</a>
+          </div>
+        </div> 
+      </div>
+</div>
+<script src="../api.js"></script>
+
+
+
+
+
+
