--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -7,17 +7,20 @@
 		  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
 		  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
 		  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+		  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 3"></button>
+		  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 3"></button>
+
 		</div>
 		<div class="carousel-inner">
 		  <div class="carousel-item active">
-			<img src="../../assets/img/img1.jpg" class="d-block w-100" alt="...">
+			<img src="../../assets/img/CruellaDP.jpg" class="d-block w-100" alt="...">
 			<div class="carousel-caption d-none d-md-block">
 			  <h5>First slide label</h5>
 			  <p>Some representative placeholder content for the first slide.</p>
 			</div>
 		  </div>
 		  <div class="carousel-item">
-			<img src="../../assets/img/img2.jpg" class="d-block w-100" alt="...">
+			<img src="../../assets/img/pika.jpeg" class="d-block w-100" alt="...">
 			<div class="carousel-caption d-none d-md-block">
 			  <h5>Second slide label</h5>
 			  <p>Some representative placeholder content for the second slide.</p>
@@ -25,6 +28,20 @@
 		  </div>
 		  <div class="carousel-item">
 			<img src="../../assets/img/r.jpeg" class="d-block w-100" alt="...">
+			<div class="carousel-caption d-none d-md-block">
+			  <h5>Third slide label</h5>
+			  <p>Some representative placeholder content for the third slide.</p>
+			</div>
+		  </div>
+		  <div class="carousel-item">
+			<img src="../../assets/img/free-guy-2439825.jpg" class="d-block w-100" alt="...">
+			<div class="carousel-caption d-none d-md-block">
+			  <h5>Third slide label</h5>
+			  <p>Some representative placeholder content for the third slide.</p>
+			</div>
+		  </div>
+		  <div class="carousel-item">
+			<img src="../../assets/img/viuda.jpg" class="d-block w-100" alt="...">
 			<div class="carousel-caption d-none d-md-block">
 			  <h5>Third slide label</h5>
 			  <p>Some representative placeholder content for the third slide.</p>
