--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,54 +1,109 @@
 <app-slider></app-slider>
+<app-modal></app-modal>
 <br>
 <div class="row">
     <div class="col-sm-3">
-      <div class="card border-5 border-primary" style="width: 20rem;">
+      <div class="card border-5 border-primary" style="width: 20rem;" height="7rem;">
         <img src="../../assets/img/expediente.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Expediente Warren</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
-      </div> 
     </div>
 
     <div class="col-sm-3">
-        <div class="card border-5 border-primary" style="width: 20rem;">
+        <div class="card border-5 border-primary" style="width: 20.5rem;" height="7rem;" >
           <img src="../../assets/img/bohemia.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content, some quick example.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
         </div> 
       </div>
 
       <div class="col-sm-3">
-        <div class="card border-5 border-primary" style="width: 20rem;">
+        <div class="card border-5 border-primary" style="width: 20rem;" height="7rem;">
           <img src="../../assets/img/spider.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Spider-Man: Un nuevo universo</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
+        
         </div> 
       </div>
 
       <div class="col-sm-3">
-        <div class="card border-5 border-primary" style="width: 20rem;">
+        <div class="card border-5 border-primary" style="width: 20rem;" height="7rem;">
           <img src="../../assets/img/1917.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">1917</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
+        
         </div> 
       </div>
 </div>
 
+<a id="logo1">Sección <span id="logo-s1" class="navbar-brand"  routerLink="home" >Musical</span></a>
 
+<div class="row">
+  <div class="col-sm-3">
+    <h6 id="name-music" style="color: #FFFFFF">Nightcore - Symphony
+    </h6>
+    <img src="../../assets/img/pexels-breakingpic-3104.jpg" alt="" id="img-music">
+    <audio controls>
+      <source src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/308622/Leo%20-%20Trying.mp3" type="audio/mpeg" />
+    </audio>
+  </div>
 
+  <div class="col-sm-3">
+    <h6 id="name-music" style="color: #FFFFFF">Abstrakt  U NCS10 Release
+    </h6>
+    <img src="../../assets/img/pexels-burst-373945.jpg" alt="" id="img-music">
+    <audio controls>
+      <source src="../../assets/music/yt1s.com - Abstrakt  U NCS10 Release.mp3" type="audio/mpeg" />
+    </audio>
+  </div>
 
+  <div class="col-sm-3">
+    <h6 id="name-music" style="color: #FFFFFF">Cartoon x Time To Talk 
+    </h6>
+    <img src="../../assets/img/pexels-vlad-bagacian-1337753.jpg" alt="" id="img-music">
+    <audio controls>
+      <source src="../../assets/music/yt1s.com - Cartoon x Time To Talk  Omen Ft Asena NCS10 Release.mp3" type="audio/mpeg" />
+    </audio>
+  </div>
 
+  <div class="col-sm-3">
+    <h6 id="name-music">DEAF KEV - Invincible</h6>
+    <img src="../../assets/img/pexels-andrea-piacquadio-761963.jpg" alt="" id="img-music">
+    <audio controls>
+      <source src="../../assets/music/DEAF KEV - Invincible [NCS Release].mp3" type="audio/mpeg" />
+    </audio>
+  </div>
 
+</div>
+<br>
+<div class="row">
+  <div class="col-sm-3">
+    <h6 id="name-music" style="color: #FFFFFF">Nightcore - Symphony
+    </h6>
+    <img src="../../assets/img/1.jpg" alt="" id="img-music">
+    <audio controls>
+      <source src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/308622/Leo%20-%20Trying.mp3" type="audio/mpeg" />
+    </audio>
+  </div>
 
+  <div class="col-sm-3">
+    <h6 id="name-music" style="color: #FFFFFF">Abstrakt  U NCS10 Release
+    </h6>
+    <img src="../../assets/img/2.jpg" alt="" id="img-music">
+    <audio controls>
+      <source src="../../assets/music/yt1s.com - Abstrakt  U NCS10 Release.mp3" type="audio/mpeg" />
+    </audio>
+  </div>
+
+  <div class="col-sm-3">
+    <h6 id="name-music" style="color: #FFFFFF">Cartoon x Time To Talk  Omen
+    </h6>
+    <img src="../../assets/img/3.jpg" alt="" id="img-music">
+    <audio controls>
+      <source src="../../assets/music/yt1s.com - Cartoon x Time To Talk  Omen Ft Asena NCS10 Release.mp3" type="audio/mpeg" />
+    </audio>
+  </div>
+
+  <div class="col-sm-3">
+    <h6 id="name-music">DEAF KEV - Invincible</h6>
+    <img src="../../assets/img/4.jpg" alt="" id="img-music">
+    <audio controls>
+      <source src="../../assets/music/DEAF KEV - Invincible [NCS Release].mp3" type="audio/mpeg" />
+    </audio>
+  </div>
+
+</div>
+<br><br>
