--- a/src/app/pelis/pelis.component.html
+++ b/src/app/pelis/pelis.component.html
@@ -5,7 +5,7 @@
 <br>
 <div class="row">
     <div  class="col-sm-3">
-      <div id="sombra" class="card border-5 border-primary" style="width: 20rem; height: 35rem;">
+      <div id="sombra" class="card border-5 border" style="width: 20rem; height: 38rem;">
         <img src="../../assets/img/expediente.jpg" style="height: 25rem" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Expediente Warren</h5>
@@ -16,7 +16,7 @@
     </div>
 
     <div class="col-sm-3">
-        <div id="sombra" class="card border-5 border-primary" style="width: 20rem; height: 35rem;">
+        <div id="sombra" class="card border-5 border" style="width: 20rem; height: 38rem;">
           <img src="../../assets/img/bohemia.jpg" style="height: 25rem" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -27,7 +27,7 @@
       </div>
 
       <div class="col-sm-3">
-        <div id="sombra" class="card border-5 border-primary" style="width: 20rem; height: 35rem;">
+        <div id="sombra" class="card border-5 border" style="width: 20rem; height: 38rem;">
           <img src="../../assets/img/spider.jpg" style="height: 25rem" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Spider-Man: Un nuevo universo</h5>
@@ -38,7 +38,7 @@
       </div>
 
       <div class="col-sm-3">
-        <div id="sombra" class="card border-5 border-primary" style="width: 20rem; height: 35rem;">
+        <div id="sombra" class="card border-5 border" style="width: 20rem; height: 38rem;">
           <img src="../../assets/img/1917.jpg" style="height: 25rem" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">1917</h5>
