--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -1,61 +1,61 @@
 /* Estilo del Menu*/
-#logo{
-    line-height: 60px;
-    margin-left: 40px;
-    display: inline-block;
-	cursor: pointer;
-	font-size: 30px;
-	font-weight: bold;
-	color: #00a7ff; /* blue */
+#logo {
+  line-height: 60px;
+  margin-left: 40px;
+  display: inline-block;
+  cursor: pointer;
+  font-size: 30px;
+  font-weight: bold;
+  color: #00a7ff; /* blue */
 }
 
-#logo:hover{
-    color: #eef9ff; /* white */
+#logo:hover {
+  color: #eef9ff; /* white */
 }
-#logo-s{
-	color: #eef9ff; /* white */
-	margin-left: 5px;
-    font-size: 30px;
+#logo-s {
+  color: #eef9ff; /* white */
+  margin-left: 5px;
+  font-size: 30px;
 }
-#logo:hover #logo-s{
-	color: #00a7ff; /* blue */
-}
-
-.sign{
-	float: right;
-	line-height: 60px;
-	margin-right: 40px;
-    font-size: 20px;
-}
-#sign{
-	float: right;
-	line-height: 60px;
-	margin-right: 40px;
-    font-size: 20px;
-}
-#sign a{
-	color: #fff;
-	font-weight: bold;
-	text-decoration: none;
-}
-.sign a{
-	color: #fff;
-	font-weight: bold;
-	text-decoration: none;
-}
-#act{
-	border: 2px solid #fff;
-	border-radius: 50px;
-	padding: 6px 15px;
+#logo:hover #logo-s {
+  color: #00a7ff; /* blue */
 }
 
-.sign a:hover{
-	color: #00a7ff; /* blue */
-	border-color: #00a7ff; /* blue */
+.sign {
+  float: right;
+  line-height: 60px;
+  margin-right: 40px;
+  font-size: 20px;
 }
-#sign a:hover{
-	color: #00a7ff; /* blue */
-	border-color: #00a7ff; /* blue */
+#sign {
+  float: right;
+  line-height: 60px;
+  margin-right: 40px;
+  font-size: 20px;
+}
+#sign a {
+  color: #fff;
+  font-weight: bold;
+  text-decoration: none;
+}
+.sign a {
+  color: #fff;
+  font-weight: bold;
+  text-decoration: none;
+}
+#act {
+  border: 2px solid #fff;
+  border-radius: 50px;
+  padding: 6px 15px;
+}
+
+.sign a:hover {
+  color: #00a7ff; /* blue */
+  border-color: #00a7ff; /* blue */
+}
+#sign a:hover {
+  color: #00a7ff; /* blue */
+  border-color: #00a7ff; /* blue */
 }
 
 /*@media (min-width: 768px){
@@ -64,6 +64,18 @@
 	}
 }*/
 
-
-
 /* Cierro del estilo de menu*/
+
+.navbar-toggler {
+  background: #00c6ff; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #0072ff,
+    #00c6ff
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #0072ff,
+    #00c6ff
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
