--- a/src/app/pelis/pelis.component.css
+++ b/src/app/pelis/pelis.component.css
@@ -1,19 +1,18 @@
-#sombra{
-    border-radius: 50px;
-    background: #5d79a8;
-    box-shadow:  20px 20px 60px #4f678f,
-                 -20px -20px 60px #6b8bc1;
+#sombra {
+  border-radius: 50px;
+  background: #5d79a8;
+  box-shadow: 7px 10px 10px #4f678f, -7px -10px 10px #6b8bc1;
 }
-img{
-    border-radius: 40px;
+img {
+  border-radius: 40px;
 }
-.row{
-    margin-left: 40px;
-    margin-right: 40px;
+.row {
+  margin-left: 40px;
+  margin-right: 40px;
 }
-a{
-    border-radius: 50px;
-    background: #5d79a8;
-    box-shadow:  20px 20px 60px #4f678f,
-                 -20px -20px 60px #6b8bc1;
+a {
+  border-radius: 50px;
+  background: #5d79a8;
+  box-shadow: 20px 20px 60px #4f678f, -20px -20px 60px #6b8bc1;
 }
+
